Bug 127198 - Assertion when trying to open a database file from main Base menu
Summary: Assertion when trying to open a database file from main Base menu
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2019-08-28 13:06 UTC by Julien Nabet
Modified: 2019-09-02 15:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Windows assert (32.72 KB, text/plain)
2019-08-28 13:07 UTC, Julien Nabet
Details
bt with debug symbols from RoadmapWizard::implUpdateRoadmap (10.02 KB, text/plain)
2019-08-28 18:03 UTC, Julien Nabet
Details
bt with debug symbols from assertion (14.29 KB, text/plain)
2019-08-28 18:04 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-08-28 13:06:36 UTC
Description:
On Win 10 with master sources updated today + enable-dbgutil, I got an assert when trying to open a database file.

Steps to Reproduce:
1. Launch Base
2. Click "Open a database file..."
3. Click "Open button"

Actual Results:
Assertion

Expected Results:
No assertion


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-08-28 13:07:26 UTC
Created attachment 153710 [details]
Windows assert
Comment 2 Julien Nabet 2019-08-28 13:11:05 UTC
I also noticed these on console:
warn:legacy.tools:24512:18724:vcl/source/control/roadmapwizard.cxx:303: RoadmapWizard::implUpdateRoadmap: there is no such path!
warn:vcl.opengl:24512:18724:vcl/opengl/win/gdiimpl.cxx:554: Render Target: Window: 1, Bitmap: 0
warn:vcl.opengl:24512:18724:vcl/opengl/win/gdiimpl.cxx:555: Supports OpenGL: 1
Assertion failed: !pWindow || (pWindow->IsSystemWindow() || pWindow->IsDockingWindow()), file C:/BLP/core/vcl/source/app/salvtables.cxx, line 5913

Caolán: thought you might be interested in this one. I wonder if it might be related to welding migration.
I'll try to reproduce this on Linux.
Comment 3 Julien Nabet 2019-08-28 18:03:57 UTC
Created attachment 153717 [details]
bt with debug symbols from RoadmapWizard::implUpdateRoadmap

On pc Debian x86-64 with master sources updated today, I could reproduce this with gen rendering (I don't reproduce this with gtk3)
Comment 4 Julien Nabet 2019-08-28 18:04:58 UTC
Created attachment 153718 [details]
bt with debug symbols from assertion
Comment 5 Commit Notification 2019-09-02 09:45:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/51f312c1366d815f8ccfd68931edba664866df09%5E%21

Resolves: tdf#127198 assert on dialog from db wizard

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2019-09-02 15:05:32 UTC
With master sources updated today, I don't reproduce the assertion.
Thank you Caolán!