Resolves: tdf#127198 assert on dialog from db wizard

Change-Id: Ibc431b4f27d1bb5c848122ef0430b13c6a9dc45b
Reviewed-on: https://gerrit.libreoffice.org/78384
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>